--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "MajuroJS"
+    "name": "Cruncht.im"
   , "version": "0.0.1"
   , "private": false
   , "dependencies": {
@@ -11,6 +11,7 @@
     , "oauth": "0.9.5"
     , "superagent": "0.4.x"
     , "redis": "0.8.2"
+    , "passport-openstreetmap": "0.1.2"
   },
   "engines": {
         "node": "0.6.X",
