--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   , "version": "0.0.1"
   , "private": false
   , "dependencies": {
-      "express": "2.5.8"
+      "express": "2.X"
     , "jade": ">= 0.0.1"
     , "bcrypt": ">=0.5.0"
     , "connect": ">= 1.8.5 < 2"
