--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     , "bcrypt": ">=0.5.0"
     , "connect": ">= 1.8.5 < 2"
     , "underscore"  : "1.1.x"
-    , "oauth": "0.9.5"
+    , "oauth": ">=0.9.5"
     , "superagent": "0.4.x"
     , "redis": "0.8.2"
-    , "passport": "0.1.16"
-    , "passport-openstreetmap": "0.1.2"
+    , "passport": ">=0.1.16"
+    , "passport-openstreetmap": ">=0.1.2"
   },
   "engines": {
         "node": "0.8.X",
